Fixed some minor details.

--- a/thesis.tex
+++ b/thesis.tex
@@ -675,7 +675,7 @@ public interface ChartRenderer {
 			
 			\item Click on \textbf{File} > \textbf{Open Dataset}, and in the dialog, select the directory containing the dataset we just generated, and click \textbf{Open}. The browser's search panel on the left should populate with some emails, and the main email view should contain information about the first email.
 			
-			\item Click on \textbf{Tag} > \textbf{Tag Manager} in the application menu to open the tag manager dialog. In order to use the report generator and its visualization, we must add the following tags: "existence", "property", "process", "technology", and "not-ak".
+			\item Click on \textbf{Tag} > \textbf{Tag Manager} in the application menu to open the tag manager dialog. In order to use the report generator and its visualization, we must add the following tags: "existence", "property", "process", "technology", and "not-ak". The report generator will also not be able to produce any usable results unless there's a sufficient number of annotated emails for each tag.
 			
 			\item You can go ahead and browse the dataset and apply tags to emails as you see fit. For the remainder of this guide, we'll be using a pre-populated dataset which you can download \href{https://github.com/ArchitecturalKnowledgeAnalysis/Datasets/raw/main/datasets/iteration-9.zip}{here}, since it has a large volume of tagged emails and thus can produce some decent visualizations. If you download it, unzip it to a directory.
 			
