--- a/title-page.tex
+++ b/title-page.tex
@@ -3,7 +3,8 @@
 \begin{titlepage}
 	\headingfont
 	\begin{center}
-		\LARGE \textbf{On the Efficacy of Keyword Searches to Find Meaningful Architectural Knowledge in Open-Source Software Mailing Lists}
+		% Don't mind the sporadic newlines for formatting.
+		\LARGE \textbf{Searching for Architectural Design Decisions in Open-Source Software\\Mailing Lists}
 		
 		\vspace{0.5cm}
 		
